--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <title>csv-cleaner</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>CSV Cleaner - Transform Email Lists</title>
 </head>
 
 <body>
